RTFTranslator: don't accept translations with no RTF involved.

Fixes #11650.
Thanks to TwoFx for investigating the issue.